<resources>
    <string name="app_name">MarvelApp</string>
    <string name="id_value">ID: %d</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>
    <string name="stories">Stories</string>
    <string name="series">Series</string>
    <string name="no_comics_available">No comics available</string>
    <string name="no_events_available">No events available</string>
    <string name="no_stories_available">No stories available</string>
    <string name="no_series_available">No series available</string>
    <string name="start_date_value">Start date: %s</string>
    <string name="end_date_value">End date: %s</string>
    <string name="start_year_value">Start Year: %d</string>
    <string name="end_year_value">End Year: %d</string>
    <string name="ratings_value">Ratings: %s</string>
    <string name="ratings_not_available">Ratings not available</string>
    <string name="marvel_characters">Marvel Characters</string>
    <string name="character_details">Character Details</string>
</resources>